# veek

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md  compile-imgui.bat  compile-imgui.sh  compile-server.bat  compile-server.sh  compile.bat  compile.sh  runtests.bat  upload.bat  veek_logserver.py
imgui/: imgui_impl_glfw_gl3.cpp  imgui_impl_sdl_gl3.cpp
include/: escapi.h  imconfig.h  stb_rect_pack.h
resources/shaders/: sprite.fsh  sprite.vsh
src/: audio.cpp  audio.h  audio_resample.cpp  audio_resample.h  client.h  common.h  crossCap.cpp  crossCap.h  escapi.cpp  globals.h  graphics.cpp  graphics.h  graphicsutil.cpp  graphicsutil.h  happyhttp.cpp  happyhttp.h  interface.cpp  interface.h  jitterbuffer.cpp  jitterbuffer.h  logging.cpp  logging.h  main.cpp  math_utils.h  network.cpp  network.h  network_client.cpp  network_client.h  network_common.h  platform.cpp  platform.h  platform_unix.cpp  platform_win32.cpp  render.cpp  render.h  ringbuffer.cpp  ringbuffer.h  server.cpp  shaders.cpp  unix_platform.cpp  (+16 more)
test/: audio_resample_test.cpp  jitterbuffer_test.cpp  ringbuffer_test.cpp
